[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/full spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/scr_enemyGoblin.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=5]
radius = 8.0
height = 0.0

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 62, 63, 64, 65 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 28 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60, 61 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 162.012

[sub_resource type="NavigationPolygon" id=6]
resource_local_to_scene = true
resource_name = "walk"

[node name="EnemyGoblin" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )
vida = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 28
vframes = 9
frame = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
visible = false
navpoly = SubResource( 6 )

[node name="Walking" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 100, 0, 100, 100, 0, 100, 0, 0 )

[node name="Fire" type="Timer" parent="."]
autostart = true

[node name="Walk" type="Timer" parent="."]
autostart = true

[node name="Idle" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Fire" to="." method="_on_Fire_timeout"]
